--- a/widget/src/app/globals.css
+++ b/widget/src/app/globals.css
@@ -20,7 +20,13 @@
 }
 
 body {
-  background: var(--background);
+  /* background: var(--background); */
+  background: transparent;
+  background-color: transparent;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* 👈 no page scroll inside iframe */
 }
